# promo-generator

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: router.py
backend/logic/: logic.py
frontend/: index.html
frontend/css/: index.css
frontend/js/: index.js
